[gd_scene load_steps=6 format=2]

[ext_resource path="res://roboto54.tres" type="DynamicFont" id=1]
[ext_resource path="res://roboto36.tres" type="DynamicFont" id=2]
[ext_resource path="res://UI/PauseScreen.gd" type="Script" id=3]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 0.25098 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.243137, 0.243137, 0.243137, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3

[node name="PauseScreen" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 3 )

[node name="Overlay" type="PanelContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_right = 1024.0
margin_bottom = 600.0

[node name="PanelContainer" type="PanelContainer" parent="CenterContainer"]
margin_left = 357.0
margin_top = 135.0
margin_right = 667.0
margin_bottom = 464.0
custom_styles/panel = SubResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/PanelContainer"]
margin_left = 3.0
margin_top = 3.0
margin_right = 307.0
margin_bottom = 326.0
custom_constants/separation = 25

[node name="Label" type="Label" parent="CenterContainer/PanelContainer/VBoxContainer"]
margin_right = 304.0
margin_bottom = 86.0
custom_fonts/font = ExtResource( 1 )
text = " PAUSED "

[node name="ResumeButton" type="Button" parent="CenterContainer/PanelContainer/VBoxContainer"]
margin_top = 111.0
margin_right = 304.0
margin_bottom = 165.0
custom_fonts/font = ExtResource( 2 )
text = " RESUME "

[node name="HelpButton" type="Button" parent="CenterContainer/PanelContainer/VBoxContainer"]
margin_top = 190.0
margin_right = 304.0
margin_bottom = 244.0
custom_fonts/font = ExtResource( 2 )
text = " HELP "

[node name="QuitButton" type="Button" parent="CenterContainer/PanelContainer/VBoxContainer"]
margin_top = 269.0
margin_right = 304.0
margin_bottom = 323.0
custom_fonts/font = ExtResource( 2 )
text = " QUIT "

[connection signal="pressed" from="CenterContainer/PanelContainer/VBoxContainer/ResumeButton" to="." method="_on_ResumeButton_pressed"]
[connection signal="pressed" from="CenterContainer/PanelContainer/VBoxContainer/HelpButton" to="." method="_on_HelpButton_pressed"]
[connection signal="pressed" from="CenterContainer/PanelContainer/VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
